flux-clusters/piserver/apps/pihole/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dashboard
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - port: 80
      targetPort: 80
