flux-clusters/piserver/apps/pihole/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-route
  namespace: pihole
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: flux-system
      sectionName: websecure # only for https traffic
  hostnames:
    - "pihole.kellehorreur.de"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pihole-dashboard
          port: 80
